[gd_scene load_steps=11 format=3 uid="uid://b2g0h6veyq6lp"]

[ext_resource type="Script" path="res://addons/dialogic/Resources/mail.gd" id="1_eciuk"]
[ext_resource type="Theme" uid="uid://pfig5buy8wqv" path="res://Clash/Themes/button.tres" id="1_ysnbm"]
[ext_resource type="FontFile" uid="uid://c1bh5wpeycudp" path="res://Clash/fonts/Cusong/Chusung-220206.ttf" id="2_f501f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ew8a"]
bg_color = Color(0.156863, 0.172549, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dw4jd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyfle"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_is7ws"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vr1xa"]

[sub_resource type="InputEventKey" id="InputEventKey_qkbua"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_x6m8l"]
events = [SubResource("InputEventKey_qkbua")]

[node name="mail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eciuk")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1ew8a")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 192.0
offset_right = 940.0
offset_bottom = 480.0
theme_override_fonts/normal_font = ExtResource("2_f501f")
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "  ,----..     ,--,                                 ,---,     
 /   /   \\  ,--.'|                               ,--.' |     
|   :     : |  | :                               |  |  :     
.   |  ;. / :  : '                    .--.--.    :  :  :     
.   ; /--`  |  ' |       ,--.--.     /  /    '   :  |  |,--. 
;   | ;     '  | |      /       \\   |  :  /`./   |  :  '   | 
|   : |     |  | :     .--.  .-. |  |  :  ;_     |  |   /' : 
.   | '___  '  : |__    \\__\\/: . .   \\  \\    `.  '  :  | | | 
'   ; : .'| |  | '.'|   ,\" .--.; |    `----.   \\ |  |  ' | : 
'   | '/  : ;  :    ;  /  /  ,.  |   /  /`--'  / |  :  :_:,' 
|   :    /  |  ,   /  ;  :   .'   \\ '--'.     /  |  | ,'     
 \\   \\ .'    ---`-'   |  ,     .-./   `--'---'   `--''       
  `---`                `--`---'                           "
scroll_active = false

[node name="BorderLine" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label_Up" type="Label" parent="BorderLine"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 60.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dw4jd")

[node name="Label_Middle" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 60.0
offset_right = 1152.0
offset_bottom = 582.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vyfle")

[node name="Label_Down" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_is7ws")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 580.0
offset_right = 376.0
offset_bottom = 620.0
scale = Vector2(10.5725, -12.9552)
theme_override_styles/panel = SubResource("StyleBoxFlat_vr1xa")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 68.0
offset_right = 415.0
offset_bottom = 91.0
text = "信箱"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 450)
layout_mode = 0
offset_left = 369.0
offset_top = 106.0
offset_right = 729.0
offset_bottom = 556.0

[node name="message3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "未知邮件（3）"
alignment = 0

[node name="message2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "未知邮件（2）"
alignment = 0

[node name="message" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "未知邮件"
alignment = 0

[node name="Button_ESC" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 594.0
offset_right = 1133.0
offset_bottom = 628.0
theme = ExtResource("1_ysnbm")
shortcut = SubResource("Shortcut_x6m8l")
text = "ESC)  返回主界面"
flat = true

[connection signal="pressed" from="VBoxContainer/message3" to="." method="_on_message_3_pressed"]
[connection signal="pressed" from="VBoxContainer/message2" to="." method="_on_message_2_pressed"]
[connection signal="pressed" from="VBoxContainer/message" to="." method="_on_message_pressed"]
[connection signal="pressed" from="Button_ESC" to="." method="_on_button_esc_pressed"]
